--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@react-three/drei": "^10.0.6",
+    "@react-three/fiber": "^9.1.2",
+    "@types/three": "^0.175.0",
     "clsx": "^2.1.1",
     "geist": "^1.3.1",
     "next": "15.3.0-canary.13",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "sonner": "^2.0.1"
+    "sonner": "^2.0.1",
+    "three": "^0.175.0"
   },
   "devDependencies": {
     "@tailwindcss/container-queries": "^0.1.1",
